--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,16 @@
 spring.application.name=my_little_airplay_backend
 # 应用服务 WEB 访问端口
 server.port=8080
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/my_little_airplay
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #下面这些内容是为了让MyBatis映射
 #指定Mybatis的Mapper文件
 mybatis.mapper-locations=classpath:mappers/*xml
 #指定Mybatis的实体目录
 mybatis.type-aliases-package=org.xjosiah.mylittleairplay.mybatis.entity
-
+#logging.level.org.xjosiah.mylittleairplay.mybatis.mapper=debug
+resource.path=/Volumes/doc/my_little_airplay_resource/
+resource.albumcoverpath=/Volumes/doc/my_little_airplay_resource/album_cover/
 
