--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.application.name=my_little_airplay_backend
 # 应用服务 WEB 访问端口
 server.port=8080
+server.servlet.context-path=/mla
+
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://localhost:3306/my_little_airplay
@@ -12,6 +14,6 @@ mybatis.mapper-locations=classpath:mappers/*xml
 #指定Mybatis的实体目录
 mybatis.type-aliases-package=org.xjosiah.mylittleairplay.mybatis.entity
 #logging.level.org.xjosiah.mylittleairplay.mybatis.mapper=debug
-resource.path=/Volumes/doc/my_little_airplay_resource/
-resource.albumcoverpath=/Volumes/doc/my_little_airplay_resource/album_cover/
+resource.path=classpath:static/my_little_airplay_resource/
+resource.albumcoverpath=classpath:static/my_little_airplay_resource/album_cover/
 
